Fixed z-index issues on Discovery

--- a/themes/experience-engine/assets/styles/components/discover/discover-modal.css
+++ b/themes/experience-engine/assets/styles/components/discover/discover-modal.css
@@ -7,7 +7,7 @@
 	position: absolute;
 	top: 0;
 	width: 100%;
-	z-index: 80;
+	z-index: 1;
 
 	& .modal-header {
 		font-style: italic;
